Fixing spacing on post helpers.

--- a/themes/v7/scss/_blog.scss
+++ b/themes/v7/scss/_blog.scss
@@ -167,7 +167,7 @@ hr {
   padding: 8px 12px;
   color: white;
   position: absolute;
-  top: -50px;
+  top: -48px;
   left: 20px;
   font-size: .85em;
   font-weight: normal;
